@@ -3,8 +3,8 @@
 <HEAD>
 <TITLE>The KNotes Handbook: Onscreen Fundamentals</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="keywords" CONTENT="knotes Post-It">
-<META NAME="description" CONTENT="Documentation for knotes">
+<META NAME="keywords" CONTENT="">
+<META NAME="description" CONTENT="">
 </HEAD>
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
@@ -31,7 +31,15 @@
 and drop files form the Desktop or kfm or some remote ftp site that you have
 open in one of kfm's windows on to KNotes. 
 <P>
-<H3><A NAME="ss3.2">3.2 Printing</A>
+<P>
+<H3><A NAME="ss3.2">3.2 Double Click on URL's</A>
+</H3>
+
+<P>KNotes recognizes URL's. By double clicking on a URL knotes will open
+a kfm browser window and attempt to open the URL.
+<P>
+<P>
+<H3><A NAME="ss3.3">3.3 Printing</A>
 </H3>
 
 <P>KNotes supports printing. You can
