@@ -3,8 +3,8 @@
 <HEAD>
 <TITLE>The KNotes Handbook: Introduction</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="keywords" CONTENT="knotes Post-It">
-<META NAME="description" CONTENT="Documentation for knotes">
+<META NAME="keywords" CONTENT="">
+<META NAME="description" CONTENT="">
 </HEAD>
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
@@ -21,21 +21,8 @@ Previous<A HREF="index.html#toc1">Table of Contents</A>
 
 <P>
 <P>
-<P>KNotes is my attempt to write a really usable and good looking 
+<P>KNotes is my attempt to write usable and good looking 
 notes application for the KDE project.
-<P>The first stage of the KNotes project has been completed. Most, if not all 
-basic functionality has been implemented. The second phase of this project will
-consist of attempting to closely integrate KNotes with the KDE desktop in
-particular 
-kwm and kpanel. Currently this integration has only been achieved in a 
-rudimentary fashion. The reason for this is that I have reached the 
-boundaries of what can currently be done with the kwm communication protocol. 
-<P>This brings me to mention the second and more serious reason for implementing
-KNotes: to test and extend the kwm communications protocol. It is at present
-for example not possible for a KNotes note to remember its position AND virtual 
-desktop on exit and place itself exactly on the same position the next time
-it is maped onto the desktop. I am currently working with Matthias on this and 
-similar problems.
 <P>KNotes can:
 <UL>
 <LI>accept drag and drop (even from a remote ftp site)</LI>
@@ -48,6 +35,7 @@ similar problems.
 <LI>use an arbitrary font for a note.</LI>
 <LI>do auto-indentation</LI>
 <LI>do two different frame styles</LI>
+<LI>open urls in a kfm browser window on double click.</LI>
 </UL>
 <P>
 <P>and remembers all this on a per note basis on exit.
