@@ -3,8 +3,8 @@
 <HEAD>
 <TITLE>The KNotes Handbook: Installation</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="keywords" CONTENT="knotes Post-It">
-<META NAME="description" CONTENT="Documentation for knotes">
+<META NAME="keywords" CONTENT="">
+<META NAME="description" CONTENT="">
 </HEAD>
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
