@@ -3,8 +3,8 @@
 <HEAD>
 <TITLE>The KNotes Handbook</TITLE>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="keywords" CONTENT="knotes Post-It">
-<META NAME="description" CONTENT="Documentation for knotes">
+<META NAME="keywords" CONTENT="">
+<META NAME="description" CONTENT="">
 </HEAD>
 <BODY BGCOLOR="#ffffff" LINK="#aa0000" TEXT="#000000" > 
 <FONT FACE="Helvetica">
@@ -21,9 +21,9 @@ PreviousTable of Contents</P>
 <SMALL><I>
 Bernd Johannes Wuebben, <CODE>wuebben@kde.org</CODE>
 </I></SMALL>
-<BR><I><SMALL>Version 0.3, 1 June 1997</SMALL></I><BR>
+<BR><I><SMALL>Version 1.0, 1 April 1998</SMALL></I><BR>
 <P><HR>
-<EM>This Handbook describes KNotes Version 0.3</EM>
+<EM>This Handbook describes KNotes Version 1.0</EM>
 <HR>
 <P>
 <H2><A NAME="toc1">1.</A> <A HREF="index-1.html">Introduction</A></H2>
@@ -41,7 +41,8 @@ Bernd Johannes Wuebben, <CODE>wuebben@kde.org</CODE>
 
 <UL>
 <LI><A HREF="index-3.html#ss3.1">3.1 Drag and Drop</A>
-<LI><A HREF="index-3.html#ss3.2">3.2 Printing</A>
+<LI><A HREF="index-3.html#ss3.2">3.2 Double Click on URL's</A>
+<LI><A HREF="index-3.html#ss3.3">3.3 Printing</A>
 </UL>
 <P>
 <H2><A NAME="toc4">4.</A> <A HREF="index-4.html">The Menu Entries</A></H2>
